# quickpiggy

./: README.md  setup.cfg
src/: quickpiggy.py
