[metadata]
# replace with your username:
name = quickpiggy
version = 0.3.0
author = nullenenenen
author_email = nullenenenen@gavagai.eu
description = QuickPiggy - launch an impromptu PostgreSQL server, hassle free.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blinkingtwelve/quickpiggy
keywords = postgresql
license = Unlicense
classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: POSIX
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
python_requires = >=2.7,!=3.0.*
py_modules = quickpiggy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quickpiggy = quickpiggy:main
